# soccer

./: README.md  snake.cabal  soccer.cabal
src/: Fixture.hs  Main.hs  Types.hs
