name:                soccer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sidraval/soccer
license:             BSD3
license-file:        LICENSE
author:              Sid Raval
maintainer:          sidsraval@gmail.com
copyright:           2018 Sid Raval
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable soccer
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , linear
                     , microlens
                     , microlens-th
                     , random
                     , vty >= 5.18.1
                     , aeson
                     , HTTP
                     , bytestring
                     , text
